# cec

./: .clang-tidy  .gitignore  CMakeLists.txt  Justfile  compile_commands.json  main.c  main.cpp  main.cxx  shell.nix
data/cec2014/: affine_info.json
include/: affine_trans.h  basic_funcs.h  cec.h  hybrid_funcs.h  interfaces.h  io.h  log.h  types.h  utils.h
include/cec/: cec.h  cec.hpp  specification.hpp  types.h
include/cecxx/: types.hpp
include/cecxx/affine_transformation/: AffineTransformation.hpp  dummy.hpp  identity.hpp  rotate.hpp  scale.hpp
include/cecxx/unimodal/: Unimodal.hpp  bent_cigar.hpp  ellips.hpp  sphere.hpp
src/: affine_trans.c  basic_funcs.c  cec.c  cec.cxx  hybrid_funcs.c  interfaces.c  io.c  utils.c
src/io/: io.cxx
src/session/: session.cxx
test/: CMakeLists.txt  unimodal.test.cpp
tests/: fixture.h  test_affine_trans.c  test_main.c  test_utils.c
